@@ -5,6 +5,8 @@ Add new items to top.
 2007-02-23 Kimmo
  Cleanup WMGotoDlg constructor
   Src: WMGotoDlg.cpp
+ CleanUp VSS dialog class
+  Src: VssPrompt.cpp
 
 2007-02-22 Kimmo
  BUG: [ 1664731 ] Margin and line numbers not separated
